apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
  - name: webui
    port: 7878
    targetPort: 7878
